clusters/common/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-demo
  annotations:
    argocd.argoproj.io/sync-wave: "-50"
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  annotations:
    argocd.argoproj.io/sync-wave: "-50"
