clusters/common/vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-demo
  namespace: vault-demo
  labels:
    app.kubernetes.io/name: vault-demo
  annotations:
    argocd.argoproj.io/sync-wave: '-40'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault-demo
    spec:
      serviceAccountName: vault-demo
      containers:
      - name: vault
        image: docker.io/hashicorp/vault:1.19.5
        imagePullPolicy: IfNotPresent
        args:
        - server
        - -dev
        - -dev-listen-address=0.0.0.0:8200
        ports:
        - name: http
          containerPort: 8200
        readinessProbe:
          httpGet:
            path: /v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: data
          mountPath: /vault/file
      volumes:
      - name: data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault-demo
  annotations:
    argocd.argoproj.io/sync-wave: '-40'
spec:
  selector:
    app.kubernetes.io/name: vault-demo
  ports:
  - name: http
    port: 8200
    targetPort: http
